moose_game_notes.txt


[9]: for x in enumerate(answer):
   ...:     if x==" ":
   ...:         print(" "),
   ...:     elif x==guess:
   ...:         print(guess),
   ...:     else:
   ...:         print("_ "),

   psudo code
   # define a counter 
   i = 0


   Failed: 
   In [29]: for letter in chosen_puzzle:
    ...:     int(counter) = 0
    ...:     if letter != ' ':
    ...:         saved_guesses.insert(counter,"_ ")
    ...:     else saved_guesses.insert(counter," ")
    ...:
    ...:
    ...:
    ...:
  File "<ipython-input-29-a8d6bc45cdf3>", line 5
    else saved_guesses.insert(counter," ")
                     ^
SyntaxError: invalid syntax

Worked: 
for letter in chosen_puzzle:
    ...:     counter=0
    ...:     if letter != ' ':
    ...:         saved_guesses.insert(counter,"_ "),
    ...:

    Success: 

for letter in chosen_puzzle:
   counter=0
   if letter != ' ':
       saved_guesses.insert(counter,"_ "),
   elif letter == ' ':
       saved_guesses.insert(counter," "),


In [43]: print(saved_guesses)
['_ ', '_ ', '_ ', '_ ', ' ', '_ ', '_ ', '_ ', '_ ', '_ ']

In [44]:


***

Attempt 9/24

In [16]: for ctr in range(len(chosen_puzzle)):
    ...:     for letter in (chosen_puzzle):
    ...:         if letter == guess:
    ...:             saved_guesses[ctr] = guess
    ...:             break
    ...:         elif letter != guess and ctr != (len(chosen_puzzle)):
    ...:             continue
    ...:         else:
    ...:             break
    ...:             print("Wrong guess")
    ...:
    ...:

    NO - printed all c's

A test
    In [24]: for ctr in range(len(chosen_puzzle)):
    ...:     for letter in chosen_puzzle:
    ...:         print(ctr,letter)
    ...:
    ...:
    ...:
    ...:
    ...:


0 v
0 i
0 d
0 e
0 o
0
0 c
0 a
0 r
0 d
1 v
1 i
1 d
1 e
1 o
1
1 c
1 a
1 r
1 d
2 v
2 i
2 d
2 e
2 o
2
2 c
2 a
2 r
2 d
3 v
3 i
3 d
3 e
3 o

In [25]: for ctr in range(len(chosen_puzzle)):
    ...:     print(ctr,chosen_puzzle[ctr])
    ...:
    ...:
    ...:
    ...:
    ...:
0 v
1 i
2 d
3 e
4 o
5
6 c
7 a
8 r
9 d
#*NEW* working initilize saved guesses 

for ctr in range(len(chosen_puzzle)):
   if chosen_puzzle[ctr] != ' ':
       saved_guesses[ctr] = "_ "
   elif chosen_puzzle[ctr]  == ' ':
       saved_guesses[ctr] = " "

# get a guess from user input
 guess = input('Enter your guess: ')


# last check loop 9/24
# still does not print an error if guess is wrong

In [54]: for ctr in range(len(chosen_puzzle)):
    ...:     if chosen_puzzle[ctr] == guess:
    ...:         saved_guesses[ctr] = guess
    ...:     elif chosen_puzzle[ctr] != guess and ctr != (len(chosen_puzzle)):
    ...:          continue
    ...:     elif ctr == (len(chosen_puzzle)):
    ...:          print("Wrong guess")
    ...:          break


#debugging loop
In [57]: for ctr in range(len(chosen_puzzle)):
    ...:     if chosen_puzzle[ctr] == guess:
    ...:         saved_guesses[ctr] = guess
    ...:     elif chosen_puzzle[ctr] != guess and ctr != (len(chosen_puzzle)):
    ...:          print("loop 2 ,",ctr),
    ...:          continue
    ...:     elif ctr != (len(chosen_puzzle)):
    ...:          print("loop 3 ,",ctr),
    ...:          print("Wrong guess"),
    ...:          break
    ...:
    ...:
loop 2 , 0
loop 2 , 1
loop 2 , 2
loop 2 , 3
loop 2 , 4
loop 2 , 5
loop 2 , 6
loop 2 , 7
loop 2 , 8
loop 2 , 9

In [65]: for num, letter in enumerate(chosen_puzzle, start=1):
    ...:     print("Letter {}: {}".format(num, letter))
    ...:
    ...:
Letter 1: v
Letter 2: i
Letter 3: d
Letter 4: e
Letter 5: o
Letter 6:
Letter 7: c
Letter 8: a
Letter 9: r
Letter 10: d

for num, letter in enumerate(chosen_puzzle, start=1):
    if chosen_puzzle[num] == guess:
        saved_guesses[num] = guess
    elif chosen_puzzle[num] != guess and num != (len(chosen_puzzle)):
         continue
    elif ctr == (len(chosen_puzzle)):
         print("Wrong guess")
         break


10/7: 
# Populated with 2 correct guesses
In [51]: for num,letter in enumerate(chosen_puzzle):
    ...:     matched = 0
    ...:     if letter == my_guess:
    ...:         saved_guesses[num] = my_guess
    ...:         matched+=1
    ...:     elif counter == (len(chosen_puzzle)) and matched == 0:
    ...:          print("Wrong guess")   

10/8 Gives wrong guess 

In [67]: for num,letter in enumerate(chosen_puzzle, start=1):
    ...:     matched = 0
    ...:     print("Letter {}: {}".format(num, letter))
    ...:     if letter == my_guess:
    ...:         saved_guesses[num] = my_guess
    ...:         matched+=1
    ...:     elif letter != my_guess and num == (len(chosen_puzzle)) and matched == 0:
    ...:         print("Letter {}: {}".format(num, letter))
    ...:         print("Wrong guess") 
    ...:  


    10/8 PM 
    Getting wrong guess, despite have a correct guess. "matched" variable is resetting to 0. 

    In [113]: my_guess = input("Enter your guess: ")
Enter your guess: a

In [114]: for num,letter in enumerate(chosen_puzzle, start=0):
     ...:     print("Letter {}: {}".format(num, letter))
     ...:     matched = 0
     ...:     if letter == my_guess:
     ...:         saved_guesses[num] = my_guess
     ...:         matched+=1
     ...:         print(matched)
     ...:     elif letter != my_guess and num == (len(chosen_puzzle)-1) and matched == 0:
     ...:         print("Wrong guess")
     ...:         print("You matched" + str(matched) 
     ...:         )
     ...:         
     ...:         
     ...:         
Letter 0: v
Letter 1: i
Letter 2: d
Letter 3: e
Letter 4: o
Letter 5:  
Letter 6: c
Letter 7: a
1
Letter 8: r
Letter 9: d
Wrong guess
You matched0

In [115]: print(saved_guesses
     ...: )
['v', '_ ', '_ ', '_ ', '_ ', ' ', '_ ', 'a', '_ ', '_ ']   


(matched=0 was set inside of the loop)

I will need logic to determine whether the puzzle was finished.

https://www.youtube.com/watch?v=SE4P7IVCunE

an_letters = "aefhilmnorsxAEFILMNORSX"
word = input ("I will cheer for you! Enter a word: ")
times = int(input("Enthusiasm level (1-10): "))
i = 0
while i < len(word):
  char = word[i]
  if char in an_letters:
    print("Give me a " + char + "! " + char)
  else: 
    print("Give me a " + char + "! " + char)
  i+=1
print("What does that spell?")
for i in range(times):
  print (word, "!!!")

---> Can replace:
i = 0
while i < len(word):
  char = word[i]

  with

for char in word:

This obviates:
  i+=1

since we're not using a while loop

Strings and loops: 
# not as pythonic
s = "abcdefgh"
for index in range(len(s)):
  if s[index] == 'i' or s[index] == 'u'
    print("There is an i or u")

# More pythonic
for char in s: 
  if char == 'i' or char == 'u':
    print("There is an i or u")

Guess and check example code:
cube = 8
for guess in range(cube+1):
  if guess**3 == cube:
    print ("Cube root of", cube, "is", guess)

More advanced version:
cube = 8
for guess in range(abs(cube+1)):
  if guess**3 >= abs(cube)
    break
  if guess**3 != abs(cube):
    print(cube, 'is not a perfect cube.')
  else: 
    if cube < 0:
      guess = -guess
    print ('Cube root of '+str (cube)+' is '+str(guess))


10/9:

Use array_equal to see if the puzzle in progress is equvalent to the answer

from numpy import array_equal

In [190]: tester=''.join(saved_guesses)

In [191]: print(tester)
video card

In [192]: array_equal(tester,chosen_puzzle)
Out[192]: True

In [193]: array_equal('',join(saved_guesses),chosen_puzzle)
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-193-75deae87748c> in <module>()
----> 1 array_equal('',join(saved_guesses),chosen_puzzle)

NameError: name 'join' is not defined

In [194]: array_equal(''.join(saved_guesses),chosen_puzzle)
Out[194]: True

In [195]: 

old version of check to see if puzzle is finished: 

In [122]: def check_fin(puz_in_prog,orig_puz):
     ...:     """
     ...:     Checks a puzzle in progress to see if it's finished
     ...:     """
     ...:     for letter in enumerate(puz_in_prog):
     ...:         if not "_ " in letter and not " " in letter:
     ...:             print("You have completed the puzzle!")
     ...:             print(puz_in_prog)
     ...:             print(orig_puz)
     ...:             

10/9

 Enter a letter to guess the word puzzle
 Enter 'quit' to end the program   > a
Wrong guess
You have made 1 wrong guesses.

 Enter a letter to guess the word puzzle
 Enter 'quit' to end the program   > m
Just wrote a correct answer to Saved Guesses!
You already guessed m!


10/10: 
 Enter a letter to guess the word puzzle
 Enter 'quit' to end the program   > r
You already guessed r!
From Saved guesses:

['m', 'o', '_ ', '_ ', '_ ', 'o', 'r']
Just wrote a correct answer to Saved Guesses!

# It matched both o's but told me I guessed R and registered it as a successful guess? 

#human readable disply of the guesses: 

 print(' '.join(saved_guesses))

# Note: will need to put the random reneration inside a loop also, so that people can play again. 

Need to implement the check_fin function. Should make a dictionary with the definitions of the terms to display at the end, and let the player choose to quit or start over.
